; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_unexpected_lexeme.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-template.c_unexpected_lexeme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexeme = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

@LEXEME_ERROR = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [29 x i8] c"unexpected lexeme: %s [%.*s]\00", align 1
@lexeme_type_str = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.lexeme*)* @unexpected_lexeme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @unexpected_lexeme(%struct.lexeme* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.lexeme*, align 8
  store %struct.lexeme* %0, %struct.lexeme** %3, align 8
  %4 = load %struct.lexeme*, %struct.lexeme** %3, align 8
  %5 = getelementptr inbounds %struct.lexeme, %struct.lexeme* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @LEXEME_ERROR, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %28

10:                                               ; preds = %1
  %11 = load %struct.lexeme*, %struct.lexeme** %3, align 8
  %12 = load i32*, i32** @lexeme_type_str, align 8
  %13 = load %struct.lexeme*, %struct.lexeme** %3, align 8
  %14 = getelementptr inbounds %struct.lexeme, %struct.lexeme* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.lexeme*, %struct.lexeme** %3, align 8
  %19 = getelementptr inbounds %struct.lexeme, %struct.lexeme* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = trunc i64 %21 to i32
  %23 = load %struct.lexeme*, %struct.lexeme** %3, align 8
  %24 = getelementptr inbounds %struct.lexeme, %struct.lexeme* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i8* @error_lexeme(%struct.lexeme* %11, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %22, i32 %26)
  store i8* %27, i8** %2, align 8
  br label %28

28:                                               ; preds = %10, %9
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}

declare dso_local i8* @error_lexeme(%struct.lexeme*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
